--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -6,9 +6,9 @@
 
   <div class="row align-items-center">
     <div class="col-lg-7 py-3 py-md-5">
-      <h1 class="display-3">¿Recuerdas Escribir?</h1>      
-      <p class="lead text-muted">Estás cansado de los tweets cortos e impersonales, de los posts &ldquo;compartidos&rdquo; que recuerdan a los email de los 90&rsquo;s?
-        Creemos en que la clave para disfrutar el internet de nuevo está en regresar a la escritura verdadera y significativa.</p>
+      <h1 class="display-3">¿Recuerdas lo que era Escribir?</h1>      
+      <p class="lead text-muted">¿Estás cansado de los tweets cortos y de las publicaciones &ldquo;compartidas&rdquo; tan impersonales que recuerdan al viejo correo de los 90&rsquo;s?
+        Creemos que la clave para disfrutar el internet de nuevo es regresar a la verdadera escritura significativa.</p>
     </div>
     <div class="col-lg-5 pl-lg-5 pb-3 py-lg-5">
       <form action="/register" method="POST" id="registration-form">
